Relocate view to leftmost column when disabling the horizontal scrollbar.

BUG: 129853

svn path=/branches/KDE/3.5/kdelibs/; revision=555177